Stop printing plugin on OS X from causing crash. Bug 388082. r=vladimir, sr=pavlov